# server/controllers/users.ts
@@ -11,7 +11,6 @@ const userList: IUserData[] = [
     username: 'admin',
     password: 'any',
     name: 'Super Admin',
-    avatar: 'https://wpimg.wallstcn.com/f778738c-e4f8-4870-b634-56703b4acafe.gif',
     introduction: 'I am a super administrator',
     email: 'admin@test.com',
     phone: '1234567890',
@@ -22,7 +21,6 @@ const userList: IUserData[] = [
     username: 'editor',
     password: 'any',
     name: 'Normal Editor',
-    avatar: 'https://wpimg.wallstcn.com/f778738c-e4f8-4870-b634-56703b4acafe.gif',
     introduction: 'I am an editor',
     email: 'editor@test.com',
     phone: '1234567890',
@@ -37,7 +35,6 @@ for (let i = 2; i < userCount; i++) {
     username: 'user_' + faker.random.alphaNumeric(9),
     password: faker.random.alphaNumeric(20),
     name: faker.name.findName(),
-    avatar: faker.image.imageUrl(),
     introduction: faker.lorem.sentence(20),
     email: faker.internet.email(),
     phone: faker.phone.phoneNumber(),
@@ -103,14 +100,31 @@ export const getUsers = (req: Request, res: Response) => {
   })
 }
 
-export const getUserInfo = (req: Request, res: Response) => {
+export const getUserInfo = async(req: any, res: Response) => {
   // Mock data based on access token
-  return res.json({
-    code: 20000,
-    data: {
-      user: userList[0]
+  const username = req.username
+  try {
+    const queryString = `select * from users where username='${username}';`
+    const user = await pool.query(queryString)
+    if (user.rowCount === 0) {
+      return res.status(401).json({
+        code: 401,
+        messaege: 'Invalid User'
+      })
+    } else {
+      return res.json({
+        data: {
+          user: user.rows[0]
+        }
+      })
     }
-  })
+  } catch (e: any) {
+    console.error(e)
+    return res.status(400).json({
+      code: 400,
+      messaege: 'Database Error'
+    })
+  }
 }
 
 export const getUserByName = (req: Request, res: Response) => {
