# src/api/users.ts
@@ -7,10 +7,10 @@ export const getUsers = (params: any) =>
     params
   })
 
-export const getUserInfo = (data: any) =>
+export const getUserInfo = (data?: any) =>
   request({
     url: '/users/info',
-    method: 'post',
+    method: 'get',
     data
   })
 
