# src/permission.ts
@@ -49,11 +49,12 @@ router.beforeEach(async(to: Route, _: Route, next: any) => {
       NProgress.done()
     } else {
       // Check whether the user has obtained his permission roles
-      if (UserModule.role !== -1 && PermissionModule.dynamicRoutes.length === 0) {
+      if (UserModule.role === Roles.undefined || PermissionModule.dynamicRoutes.length === 0) {
         try {
-          // Note: roles must be a object array! such as: ['admin'] or ['developer', 'editor']
-          // await UserModule.GetUserInfo()
+          console.log('generating routes.', UserModule.role)
+          await UserModule.GetUserInfo()
           const role = UserModule.role
+          console.log('role', role)
           // Generate accessible routes map based on role
           PermissionModule.GenerateRoutes(role)
           // Dynamically add accessible routes
